--- a/sources/css/storybookPlus.css
+++ b/sources/css/storybookPlus.css
@@ -89,23 +89,33 @@ header .infoIcn:active {
 	font-weight:bold;
 }
 #playBtn {
-	background-color: #2EB8EE;
-	text-decoration: none;
-	border-radius: 5px;
-	color: #333;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;;
-	font-size: 20px;
-	font-weight: bold;
-	padding: 12px 40px 14px 40px;
+	-moz-border-bottom-colors: none;
+	-moz-border-image: none;
+	-moz-border-left-colors: none;
+	-moz-border-right-colors: none;
+	-moz-border-top-colors: none;
+	border-radius: 4px 4px 4px 4px;
+	border-style: solid;
+	border-width: 1px;
+	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+	cursor: pointer;
+	display: inline-block;
+	font-size: 16px;
+	line-height: 22px;
+	margin-bottom: 0;
+	padding: 10px 50px;
 	text-align: center;
-	letter-spacing: normal;
-	/* text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7); */
-	width: 150px;
+	vertical-align: middle;
+	background-color: #006DCC;
+	background-image: -moz-linear-gradient(center top , #0088CC, #0044CC);
+	background-repeat: repeat-x;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	color: #FFFFFF;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	text-decoration: none;
 }
 #playBtn:hover {
-	color:#000;
-	background-color: #39c7ff;
-	cursor: pointer;
+	background-color: #0088CC;
 }
 
 
