Remove hideous yellow button outline from audio buttons

--- a/sources/audioplayer/mediaelementplayer.css
+++ b/sources/audioplayer/mediaelementplayer.css
@@ -189,7 +189,7 @@ background: url(background.png);
 
 /* :focus for accessibility */
 .mejs-controls .mejs-button button:focus {
-	outline: solid 1px yellow;
+	outline: none;
 }
 
 /* End: CONTROL BAR */
