--- a/sources/css/storybookPlus.css
+++ b/sources/css/storybookPlus.css
@@ -214,16 +214,14 @@ header .infoIcn:active {
 	margin:0;
 }
 #quiz .answerArea {
-	height:auto;
-	max-height:137px;
 	padding:0px 20px;
 	margin:0;
 }
 #quiz label {
 	display:block;
-	margin:0px 0px 10px 0px;
+	margin:0px 0px 6px 0px;
 	font-family:Arial, Helvetica, sans-serif;
-	font-size:16px;
+	font-size:14px;
 	color:#000;
 }
 #quiz textarea {
@@ -231,19 +229,13 @@ header .infoIcn:active {
 	width:588px;
 	height:108px;
 	padding:5px;
-	font-size:16px;
+	font-size:14px;
 	color:#000;
 	resize:none;
 }
 #quiz .submitArea {
-	position:absolute;
-	bottom:0;
-	width:607px;
-	height:32px;
-	text-align:right;
-	padding:9px;
-	background-color:#333;
-	background-image:url(../img/noisy-texture.png);
+	text-align:center;
+	margin: 25px 0px 10px 0px;
 }
 #quiz .submitArea button {
 	background-color: #5BB75B;
@@ -263,10 +255,10 @@ header .infoIcn:active {
 	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
 	cursor: pointer;
 	display: inline-block;
-	font-size: 14px;
+	font-size: 16px;
 	line-height: 20px;
-	margin-bottom: 0;
-	padding: 4px 12px;
+	margin: 0;
+	padding: 8px 24px;
 	text-align: center;
 	vertical-align: middle;
 }
